--- a/PaymentsTU/app.config
+++ b/PaymentsTU/app.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  
+  <connectionStrings>
+    <add name="Payments" providerName="System.Data.SQLite" connectionString="Data Source=.\Database\payments.db; Version=3;" />
+  </connectionStrings>
 </configuration>
