--- a/PaymentsTU/packages.config
+++ b/PaymentsTU/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="System.Data.SQLite.Core" version="1.0.102.0" targetFramework="net30" />
+  <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net30" />
 </packages>
