--- a/PaymentsTU/PaymentsTU.csproj
+++ b/PaymentsTU/PaymentsTU.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Dialogs\DialogView\EditDialogViewModelBase.cs" />
     <Compile Include="Dialogs\DialogView\EditEmployeeDialogViewModel.cs" />
     <Compile Include="Dialogs\DialogView\EditPaymentTypeViewModel.cs" />
+    <Compile Include="Lazy.cs" />
     <Compile Include="Model\Currency.cs" />
     <Compile Include="Model\EmployeeComparer.cs" />
     <Compile Include="Model\ViewType.cs" />
