--- a/PaymentsTU/PaymentsTU.csproj
+++ b/PaymentsTU/PaymentsTU.csproj
@@ -70,6 +70,7 @@
     </ApplicationDefinition>
     <Compile Include="Behaviors\ScrollIntoViewBehavior.cs" />
     <Compile Include="Behaviors\TestBoxMaskBehavior.cs" />
+    <Compile Include="Controls\GridHelpers.cs" />
     <Compile Include="Controls\LabeledTextBox.xaml.cs">
       <DependentUpon>LabeledTextBox.xaml</DependentUpon>
     </Compile>
@@ -120,6 +121,7 @@
     <Compile Include="ViewModel\EmployeeViewModel.cs" />
     <Compile Include="ViewModel\IListPageViewModel.cs" />
     <Compile Include="ViewModel\IPageBase.cs" />
+    <Compile Include="ViewModel\IReport.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\MatrixViewMode.cs" />
     <Compile Include="ViewModel\PaymentReportViewModel.cs" />
@@ -127,7 +129,11 @@
     <Compile Include="ViewModel\PaymentViewModel.cs" />
     <Compile Include="ViewModel\PeriodViewModel.cs" />
     <Compile Include="ViewModel\RelayCommand.cs" />
+    <Compile Include="ViewModel\ReportViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
+    <Compile Include="View\ReportView.xaml.cs">
+      <DependentUpon>ReportView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\TypePaymentView.xaml.cs">
       <DependentUpon>TypePaymentView.xaml</DependentUpon>
     </Compile>
@@ -207,6 +213,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\ReportView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\TypePaymentView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
