--- a/PaymentsTU/app.config
+++ b/PaymentsTU/app.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="PaymentsTU.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <connectionStrings>
     <add name="Payments" providerName="System.Data.SQLite" connectionString="Data Source=.\Database\payments.db; Version=3;" />
   </connectionStrings>
+  <applicationSettings>
+    <PaymentsTU.Properties.Settings>
+      <setting name="WarningLimitPercent" serializeAs="String">
+        <value>90</value>
+      </setting>
+    </PaymentsTU.Properties.Settings>
+  </applicationSettings>
 </configuration>
