--- a/PaymentsTU/PaymentsTU.csproj
+++ b/PaymentsTU/PaymentsTU.csproj
@@ -110,6 +110,8 @@
     <Compile Include="Dialogs\DialogView\EditDialogViewModelBase.cs" />
     <Compile Include="Dialogs\DialogView\EditEmployeeDialogViewModel.cs" />
     <Compile Include="Dialogs\DialogView\EditPaymentTypeViewModel.cs" />
+    <Compile Include="Document\DocumentRendererFabric.cs" />
+    <Compile Include="Document\XpsRenderStrategy.cs" />
     <Compile Include="Lazy.cs" />
     <Compile Include="Model\Currency.cs" />
     <Compile Include="Model\Dal.Employee.cs" />
@@ -284,6 +286,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="1485909538_money-safe-box.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DocumentModel\DocumentModel.csproj">
+      <Project>{A8F6CCC5-EEFB-439D-8960-FC74837B1C0A}</Project>
+      <Name>DocumentModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.102.0\build\net20\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.102.0\build\net20\System.Data.SQLite.Core.targets')" />
