--- a/PaymentsTU/PaymentsTU.csproj
+++ b/PaymentsTU/PaymentsTU.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Dialogs\DialogView\EditPaymentTypeViewModel.cs" />
     <Compile Include="Document\DocumentRendererFabric.cs" />
     <Compile Include="Document\FlowDocumentRenderStrategy.cs" />
+    <Compile Include="Document\PageLayout.cs" />
     <Compile Include="Document\XpsRenderStrategy.cs" />
     <Compile Include="Lazy.cs" />
     <Compile Include="Model\Currency.cs" />
