--- a/PaymentsTU/app.config
+++ b/PaymentsTU/app.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="PaymentsTU.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <connectionStrings>
     <add name="Payments" providerName="System.Data.SQLite" connectionString="Data Source=.\Database\payments.db; Version=3;" />
   </connectionStrings>
+  <userSettings>
+    <PaymentsTU.Properties.Settings>
+      <setting name="PaymentsPeriodFrom" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="PaymentsPeriodTo" serializeAs="String">
+        <value />
+      </setting>
+    </PaymentsTU.Properties.Settings>
+  </userSettings>
 </configuration>
